copy fdt implement

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "stdbool.h": "c",
         "thread.h": "c",
         "pte.h": "c",
-        "palloc.h": "c"
+        "palloc.h": "c",
+        "main.h": "c"
     }
 }
